--- a/web/themes/custom/securance/scss/layout/_footer.scss
+++ b/web/themes/custom/securance/scss/layout/_footer.scss
@@ -95,6 +95,7 @@ footer.site-footer {
         font-size: 12px;
         font-family: "Barlow-Medium";
         margin: 0;
+        text-transform: uppercase;
       }
       .address-content {
         color: #444;
